fixes code line breaks in AC table

--- a/_sass/resources.scss
+++ b/_sass/resources.scss
@@ -224,3 +224,7 @@ section.resources-section {
 		}
 	}
 }
+
+table#signing-file-elements tr td code {
+	word-break: normal;
+}
